Fixed issue with sharing button getting hidden under H1

--- a/wp-content/themes/ppo/assets/less/app.less
+++ b/wp-content/themes/ppo/assets/less/app.less
@@ -133,10 +133,7 @@ border-top-right-radius: 0;
 
 .sharing {
     display: inline-block;
-    // width: 50px;
-    // position: absolute;
-    // top: 104px;
-    // right: 0px;
+    position: relative;
     float: right;
     z-index: 9999;
     clear: both;
